test/negative/tuple_unknown_type.mut
# ERROR: tuple with unknown element type
x: (i64, Foo) = (1, 2)
